fixed overflow on the whole page to make it look better

--- a/public/styles/about.css
+++ b/public/styles/about.css
@@ -1,6 +1,6 @@
-::-html {
+html {
 	height: 100vh;
-	scrollbar-base-color: green;
+	overflow-y: hidden;
 }
 
 body {
