--- a/public/styles/languages/languages.css
+++ b/public/styles/languages/languages.css
@@ -1,6 +1,6 @@
 html {
 	height: 100vh;
-	scrollbar-base-color: green;
+	overflow-y: hidden;
 }
 
 body {
